--- a/login-frontend/index.html
+++ b/login-frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/adc-logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/adc-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Além do Código</title>
   </head>
